Improved CSS with Bootstrap

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,60 @@
-<h1>Home Page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Music Wall</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/musicwall.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
+</head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+	<header class="intro">
+	    <div class="intro-body">
+	        <div class="container">
+	            <div class="row">
+	                <div class="col-md-8 col-md-offset-2">
+	                    <h1 class="brand-heading">MUSIC WALL</h1>
+	                    <p class="intro-text">Create, Listen, Discover</p>
+	                    <a href="/tracks" class="btn btn-circle page-scroll">
+	                        <i class="fa fa-angle-double-down animated"></i>
+	                    </a>
+	                    <a href="/tracks"><p class="intro-text">Sign in</p>
+	                    </a>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
+	</header>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/musicwall.js"></script>
+
+</body>
+
+</html>
