--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,10 +12,8 @@
   -->
   <link rel="stylesheet" href="/stylesheets/application.css">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/javascript/application.js"></script>
+  <title>Music Wall</title>
 
-  <title></title>
 </head>
 <body>
   <%= yield %>
