--- a/app/views/tracks/new.erb
+++ b/app/views/tracks/new.erb
@@ -11,19 +11,33 @@
 	</div>
 <% end %>
 
- 	<form method="post" action="/tracks">
-    <div>
-      <label>Song title:</label>
-     	<input type="text" name="song_title" value="<%= @track.song_title %>">
+<form method="post" action="/tracks">
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Song Title:</label>
+    <div class="col-sm-10">
+      <input type="text" name="song_title" class="form-control" value="<%= @track.song_title %>">
     </div>
-    <div>
-      <label>Author:</label>
-      <input type="text" name="author" value="<%= @track.author %>">
-   	</div>
-   <div>
-    <label>Link to video or track:</label>
-      <input type="text" name="url" value="<%= @track.url %>">
-   </div>
-      <input type="submit" value="Submit">
-   </div>
- </form>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Artist:</label>
+    <div class="col-sm-10">
+      <input type="text" name="author" class="form-control" value="<%= @track.author %>">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Link to video or track:</label>
+    <div class="col-sm-10">
+      <input type="text" name="url" class="form-control" value="<%= @track.url %>">
+    </div>
+  </div>
+ 	<div class="form-group">
+ 		<div class="col-sm-10">
+      <input type="submit" value="Add track">
+    </div>
+  </div>
+</form>
+
+<div class="col-sm-10">
+  <hr/>
+  <span><i class="fa fa-play"></i></span> <a href="/">Return home</a>
+</div>
