--- a/public/css/musicwall.css
+++ b/public/css/musicwall.css
@@ -1,7 +1,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Playfair Display,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Open Sans,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
     background-color: #000;
 }
@@ -267,27 +267,6 @@ a:focus {
     -o-background-size: cover;
 }
 
-#map {
-    width: 100%;
-    height: 200px;
-    margin-top: 100px;
-}
-
-@media(min-width:767px) {
-    .content-section {
-        padding-top: 250px;
-    }
-
-    .download-section {
-        padding: 100px 0;
-    }
-
-    #map {
-        height: 400px;
-        margin-top: 250px;
-    }
-}
-
 .btn {
     border-radius: 0;
     text-transform: uppercase;
@@ -364,4 +343,45 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+}
+
+input {
+    display: inline-block;
+    border: 1px solid #42dca3;
+    border-radius: 0;
+    color: #252525;
+    background-color: #42dca3;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 400;
+    padding: 6px 12px;
+    vertical-align: middle;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+
+input:hover {
+    border: 1px solid #42dca3;
+    outline: 0;
+    color: #42dca3;
+    background-color: transparent;
+}
+
+.form-control {
+    margin: 5px;
+    max-width: 50%
+}
+
+a.button {
+  padding: 6px;
+  background-color: transparent;
+}
+
+.modal-body {
+    background-color: #2e2e2e
+}
+
+.modal-content {
+    background-color: #2e2e2e
 }
